--- a/VariousMenu/app/src/main/res/menu/menu.xml
+++ b/VariousMenu/app/src/main/res/menu/menu.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/switchActivity"
+        android:icon="@mipmap/ic_launcher"
+        android:title="Calculator"
+        app:showAsAction="always|withText" />
     <item
         android:id="@+id/menuback"
         android:title="배경색 변경">
@@ -18,7 +24,7 @@
 
     <item
         android:id="@+id/rotate"
-        android:title="그림 360도 회전" />
+        android:title="그림 30도 회전" />
 
     <group
         android:checkableBehavior="all">
