--- a/VariousMenu/app/src/main/res/layout/activity_tab_host.xml
+++ b/VariousMenu/app/src/main/res/layout/activity_tab_host.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/tab1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#000000"
+                    android:background="#ffccff"
                     android:orientation="vertical">
 
                     <LinearLayout
