--- a/FragmentHW/app/src/main/res/layout/activity_main.xml
+++ b/FragmentHW/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.mskir.fragmenthw.MainActivity">
 
    <fragment
        android:id="@+id/listViewFragment"
        android:layout_width="match_parent"
-       android:layout_height="300dp"
+       android:layout_height="200dp"
        android:name="com.example.mskir.fragmenthw.FragmentA"
        tools:layout="@layout/activity_main"></fragment>
+
+   <fragment
+      android:id="@+id/infoFragment"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+      android:name="com.example.mskir.fragmenthw.FragmentB"
+      tools:layout = "@layout/activity_main"></fragment>
+
 
 </LinearLayout>
