--- a/FragmentTask/app/src/main/res/layout/box.xml
+++ b/FragmentTask/app/src/main/res/layout/box.xml
@@ -6,8 +6,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="스파게티"/>
+            android:text="스파게티"
+            android:textColor="#000000"
+            android:textSize="20dp"/>
         <EditText
+            android:inputType="number"
             android:id="@+id/numOfSpa"
             android:hint="갯수입력"/>
     </TableRow>
@@ -15,13 +18,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="20dp"
             android:text="피자"/>
         <EditText
             android:id="@+id/numOfPizza"
+            android:inputType="number"
             android:hint="갯수입력"/>
     </TableRow>
     <TableRow>
         <TextView
+            android:textColor="#000000"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="멤버쉽"/>
@@ -47,4 +55,5 @@
             </LinearLayout>
         </RadioGroup>
     </TableRow>
+
 </TableLayout>
