--- a/H.W/VariousMenu/app/src/main/res/layout/activity_tab_host.xml
+++ b/H.W/VariousMenu/app/src/main/res/layout/activity_tab_host.xml
@@ -35,6 +35,7 @@
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="30dp"
