--- a/H.W/HW6/app/src/main/res/layout/activity_main3.xml
+++ b/H.W/HW6/app/src/main/res/layout/activity_main3.xml
@@ -154,6 +154,7 @@
                 android:text="등록일:" />
 
             <TextView
+                android:layout_weight="1"
                 android:id="@+id/tvRegdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
